fix text wrapping

--- a/styles/term2.less
+++ b/styles/term2.less
@@ -9,6 +9,7 @@
     padding: 0;
 
     > div {
+      white-space: pre;
       > span {
         display: inline-block;
         line-height: inherit;
